--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^4",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-responsive-carousel": "^3.2.18"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
